--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -32,3 +32,47 @@
   width: 360px;
   height: 200px;
 }
+.feedback-form {
+  display: flex;
+  flex-direction: column;
+  width: 408px;
+  height: 296px;
+
+  padding: 24px 0px 0px 0px;
+  gap: 16px;
+  border-radius: 8px 0px 0px 0px;
+  opacity: 0px;
+}
+input {
+  display: flex;
+  flex-direction: column;
+  width: 360px;
+}
+textarea {
+  display: flex;
+  flex-direction: column;
+  width: 360px;
+  height: 112px;
+  gap: 8px;
+  width: 360px;
+  background-color: ;
+  border-radius: 4px;
+
+  border: 1px solid #808080;
+}
+button {
+  width: 95px;
+  height: 40 px;
+  padding: 8px 16px 8px 16px;
+  gap: 10px;
+  border-radius: 8px;
+  opacity: 0px;
+  background-color: #4e75ff;
+  font-family: Montserrat;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 24px;
+  letter-spacing: 0.04em;
+  text-align: center;
+  color: #ffffff;
+}
